<resources>
    <string name="app_name">逗伴</string>
    <string name="btn_search">搜索</string>
    <string name="tv_movie">电影</string>
    <string name="tv_book">图书</string>
    <string name="tv_music">音乐</string>
    <string name="tv_more">更多</string>
    <string name="top250">Top250</string>
    <string name="in_theaters">影院热映</string>
    <string name="new_movies">新片榜</string>
    <string name="coming_soon">即将上映</string>
    <string name="weekly">口碑榜</string>
    <string name="us_box">北美票房榜</string>
    <string name="about_us">关于我们</string>
    <string name="user_self">个人中心</string>
    <string name="acache">缓存</string>
    <string name="settings">设置</string>
    <string name="tv_login">登录</string>
    <string name="tv_about_us">我只是一只很萌很萌的小逗伴</string>
</resources>
