<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.a14512.nimd_douban.utils.customView.SlidingView
        android:id="@+id/sliding_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <include layout="@layout/left_menu"/>

            <LinearLayout
                android:id="@+id/activity_main_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#f0f0f0"
                android:fitsSystemWindows="true">

                <include layout="@layout/activity_toolbar"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_movie"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:text="@string/tv_movie"/>

                    <TextView
                        android:id="@+id/tv_book"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:text="@string/tv_book"/>

                    <TextView
                        android:id="@+id/tv_music"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:text="@string/tv_music"/>
                </LinearLayout>

                <View
                    android:layout_marginTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@android:color/white"/>

                <FrameLayout
                    android:id="@+id/frame_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>
        </LinearLayout>
    </com.example.a14512.nimd_douban.utils.customView.SlidingView>

</RelativeLayout>
