<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:gravity="center"
                    android:background="@android:color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_centerVertical="true"
                        android:text="@string/in_theaters"
                        android:textSize="16sp"/>

                    <LinearLayout
                        android:id="@+id/more_in_theaters"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="16dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/tv_more"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/right"/>

                    </LinearLayout>

                </RelativeLayout>

                <com.example.a14512.nimd_douban.utils.customView.MyRecyclerView
                    android:id="@+id/in_theaters_recycler_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#f0f0f0"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:gravity="center"
                    android:background="@android:color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_centerVertical="true"
                        android:text="@string/coming_soon"
                        android:textSize="16sp"/>

                    <LinearLayout
                        android:id="@+id/more_coming_soon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="16dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/tv_more"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/right"/>

                    </LinearLayout>

                </RelativeLayout>

                <com.example.a14512.nimd_douban.utils.customView.MyRecyclerView
                    android:id="@+id/coming_soon_recycler_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#f0f0f0"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:gravity="center"
                    android:background="@android:color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_centerVertical="true"
                        android:text="@string/us_box"
                        android:textSize="16sp"/>

                    <LinearLayout
                        android:id="@+id/more_us_box"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="16dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/tv_more"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/right"/>

                    </LinearLayout>

                </RelativeLayout>

                <com.example.a14512.nimd_douban.utils.customView.MyRecyclerView
                    android:id="@+id/us_box_recycler_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#f0f0f0"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:gravity="center"
                    android:background="@android:color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_centerVertical="true"
                        android:text="@string/top250"
                        android:textSize="16sp"/>

                    <LinearLayout
                        android:id="@+id/more_top250"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="16dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/tv_more"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/right"/>

                    </LinearLayout>

                </RelativeLayout>

                <com.example.a14512.nimd_douban.utils.customView.MyRecyclerView
                    android:id="@+id/top250_recycler_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#f0f0f0"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:gravity="center"
                    android:background="@android:color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_centerVertical="true"
                        android:text="@string/weekly"
                        android:textSize="16sp"/>

                    <LinearLayout
                        android:id="@+id/more_weekly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="16dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/tv_more"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/right"/>

                    </LinearLayout>

                </RelativeLayout>

                <com.example.a14512.nimd_douban.utils.customView.MyRecyclerView
                    android:id="@+id/weekly_recycler_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#f0f0f0"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:gravity="center"
                    android:background="@android:color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_centerVertical="true"
                        android:text="@string/new_movies"
                        android:textSize="16sp"/>

                    <LinearLayout
                        android:id="@+id/more_new_movies"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="16dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/tv_more"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/right"/>

                    </LinearLayout>

                </RelativeLayout>

                <com.example.a14512.nimd_douban.utils.customView.MyRecyclerView
                    android:id="@+id/new_movies_recycler_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#f0f0f0" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>